# If no poetry:
# curl -sSL https://install.python-poetry.org | python3 -

# If system can't find poetry:
# vim ~/.zshrc
# export PATH="$HOME/.local/bin:$PATH"
# source ~/.zshrc
# poetry --version

# poetry install
# poetry run python loading.py

[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Matrix data analysis and loading program"
authors = ["spacotto <spacotto@student.42lehavre.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.25.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0"
pandas-stubs = "^2.1.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
